--- a/essentials/visitors/thema-customizing.mdx
+++ b/essentials/visitors/thema-customizing.mdx
@@ -1,18 +1,94 @@
 ---
-title: "테마 커스터마이징하기"
-description: "Mile Visitors 메인 색상을 커스터마이징하는 방법을 알려드립니다."
+title: "기기별 홈 화면 구성하기"
+description: "Mile Visitors 기기별 화면 구성하는 방법을 안내드립니다."
 ---
 
-`Mile Visitors` 탭의 `테마 관리` 페이지에 접속합니다.
+## 1. 기기 관리 페이지 접속하기
 
-해당 페이지에서는 Mile Visitors의 기본 색이 되는 **Primary** 색을 지정할 수 있습니다.
+좌측의 `Mile Visitors` 탭을 클릭하고, 목록에서 `기기 관리` 페이지를 클릭하여, 해당 페이지에 접속해주세요.
 
-<Frame>
-    <img src="/images/visitors/thema-customizing/img1.png" width="100%" />
-</Frame>
-
-색상 선택 박스를 선택하면, 직접 서비스의 대표가 되는 색상을 골라서, 저장하기 버튼을 누르면, 최종적으로 기업 내 Visitors에 해당 스타일이 적용됩니다.
+기기 관리 페이지에서는 Visitors 제품에 등록된 기기 정보를 조회하고 각 기기별로 태블릿에서 활성화시킬 기능을 설정할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/thema-customizing/img2.png" width="100%" />
+    <img src="/images/essentials/visitors/thema-customizing/img1.png" width="100%" />
 </Frame>
+
+<br />
+
+## 2. 설정할 기기 선택하기
+
+설정하고자 하는 기기를 선택해주세요.
+
+<Frame>
+    <img src="/images/essentials/visitors/thema-customizing/img2.png" width="100%" />
+</Frame>
+
+<br />
+
+사이드 창이 띄워지면 홈 화면 구성 탭을 선택해주세요.
+
+<Frame>
+    <img src="/images/essentials/visitors/thema-customizing/img3.png" width="100%" />
+</Frame>
+
+<br />
+
+## 3. 홈 화면 메인 색상 설정하기
+
+색상 설정 영역의 색 부분을 선택하여 태블릿 메인 색상을 설정할 수 있습니다.
+
+<Warning>설정 후 저장 버튼을 눌려주셔야 태블릿에 최종 반영됩니다.</Warning>
+
+<Frame>
+    <img src="/images/essentials/visitors/thema-customizing/img4.png" width="100%" />
+</Frame>
+
+<br />
+
+## 4. 홈 화면 인삿말 설정하기
+
+기본 인삿말이 아닌 우리 회사만의 특색있는 인삿말을 설정하시고 싶으시다면, 커스터마이징 기능을 통해
+태블릿에 표시할 메인 인삿말을 설정할 수 있습니다.
+
+인삿말 커스터마이징을 활성화하고, 메인 인삿말을 작성해주세요. 작성하시면 미리보기에서 예상 화면을 보실 수 있습니다.
+
+<Warning>설정 후 저장 버튼을 눌려주셔야 태블릿에 최종 반영됩니다.</Warning>
+
+<Frame>
+    <img src="/images/essentials/visitors/thema-customizing/img5.png" width="100%" />
+</Frame>
+
+<br />
+
+커스터마이징 기능 OFF시, 인삿말 기본 템플릿이 적용됩니다.
+
+<Info>
+안녕하세요.
+{우리 회사명}입니다.
+방문을 환영합니다. 😄
+</Info>
+
+<br />
+
+## 5. 홈 화면 안내 메세지 설정하기
+
+배치할 태블릿에 추가 안내 메세지를 표시하고 싶으시다면, 안내 메세지 설정 기능을 통해 태블릿에 추가적으로 나타낼 문구를 설정할 수 있습니다.
+
+안내 메세지를 활성화하고 해당 태블릿에 표시하고 싶은 문구를 작성해주세요.
+
+방문자가 참고하면 좋은 안내 메세지를 작성해주셔도 되고, 특정한 이벤트가 발생했을 때 (세미나, 면접 등) 추가적인 정보를 전달하고싶을 때 사용하셔도 좋습니다!
+
+<Warning>설정 후 저장 버튼을 눌려주셔야 태블릿에 최종 반영됩니다.</Warning>
+<br />
+
+<Frame>
+    <img src="/images/essentials/visitors/thema-customizing/img6.png" width="100%" />
+</Frame>
+
+<br />
+
+기기별 커스터마이징 방법은 아래 링크에서 추가로 확인할 수 있습니다!
+
+-   기기별 명칭 & 사용 기능 설정하기
+-   기기별 초인종 설정하기
+-   기기별 당일 방문 설정하기
