--- a/essentials/visitors/doorbell-setting.mdx
+++ b/essentials/visitors/doorbell-setting.mdx
@@ -1,69 +1,94 @@
 ---
-title: "초인종 기능 설정하기"
+title: "기기별 초인종 설정하기"
+description: "Mile Visitors 기기별로 초인종 기능 활성화 여부와 담당자 설정하는 방법을 안내드립니다."
 ---
 
 ---
 
-### 1. 초인종 기능 활성화 여부 변경하기
+## 1. 기기 관리 페이지 접속하기
 
-`Mile Visitors` 탭에서 `초인종 관리` 페이지에 접속하여 초인종 기능 여부를 설정할 수 있습니다.
+좌측의 `Mile Visitors` 탭을 클릭하고, 목록에서 `기기 관리` 페이지를 클릭하여, 해당 페이지에 접속해주세요.
+
+기기 관리 페이지에서는 Visitors 제품에 등록된 기기 정보를 조회하고 각 기기별로 태블릿에서 활성화시킬 기능을 설정할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img1.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img1.png" width="100%" />
 </Frame>
 
 <br />
 
-우측 버튼을 통해 초인종 기능 활성화를 킵니다.
+## 2. 설정할 기기 선택하기
+
+설정하고자 하는 기기를 선택해주세요.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img2.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img2.png" width="100%" />
+</Frame>
+
+<br />
+사이드 창이 띄워지면 초인종 탭을 선택해주세요.
+
+<Frame>
+    <img src="/images/visitors/essentials/doorbell-setting/img3.png" width="100%" />
 </Frame>
 
 <br />
 
-변경 확인 창이 뜨고, 최종적으로 `변경하기` 버튼을 클릭하면, 활성화 여부가 변경됩니다.
+## 3. 초인종 기능 활성화 여부 설정하기
 
-이때, 변경 확인 창에서 나오는 문구와 같이 초인종 기능 여부에 따라서 Mile Visitors 서비스의 메인 화면이 변경됩니다.
+우측에 위치한 토글 아이콘을 눌러 초인종 활성화 여부를 설정할 수 있습니다.
 
-웹 상에서 메인 화면을 확인해보시려면, `테마 관리` 페이지에서 현재 Mile Visitors의 메인 화면을 보실 수 있습니다.
+<Info>
+    <aside>
+        ℹ️ 이때 초인종 사용 여부에 따라서 기기의 메인 화면이 변경됩니다.
+        <br />웹 상에서 메인 화면을 확인해보시려면, 홈 화면 구성 탭에서 현재 기기의 메인 화면을 보실 수 있습니다.
+    </aside>
+</Info>
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img3.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img4.png" width="100%" />
 </Frame>
 
 <br />
-<br />
-
-### 2. 초인종 슬랙 채널 추가하기
+## 4. 초인종 슬랙 채널 추가하기
 
 초인종 슬랙 채널 섹션의 우측 `채널 추가하기` 버튼을 클릭합니다.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img4.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img5.png" width="100%" />
 </Frame>
 
 <br />
-추가하고자 하는 채널들을 선택하고 추가하기 버튼을 클릭하면, 최종적으로 방문자가 호출시 알람이 갈 슬랙 채널들이 추가됩니다.
+
+추가하고자 하는 채널의 링크를 가져와 붙여넣은 후 `조회` 버튼을 눌러주세요.  
+조회된 슬랙 채널을 선택하고 `추가하기` 버튼을 누르면, 최종적으로 초인종이 눌렸을 때 알람 갈 슬랙 채널들이 추가됩니다.
+
+상세한 슬랙 채널 추가 방법은 <a href="https://mile.mintlify.app/essentials/common/link-slack-channel">슬랙 채널 연결하기</a>에서 확인해주세요.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img5.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img6.png" width="100%" />
 </Frame>
 
 <br />
-<br />
 
-### 3. 초인종 담당자 추가하기
+## 5. 초인종 담당자 추가하기
 
 초인종 담당자 섹션의 우측 `담당자 추가하기` 버튼을 클릭합니다.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img6.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img7.png" width="100%" />
 </Frame>
 
 <br />
-추가하고자 하는 담당자를 검색하고, 선택하여 추가하기 버튼을 클릭하면, 최종적으로 방문자가 호출시 알람이 갈 담당자가 추가됩니다.{" "}
+추가하고자 하는 담당자를 검색하고, 선택하여 추가하기 버튼을 클릭하면, 최종적으로 알림 받을 담당자가 추가됩니다.
 
 <Frame>
-    <img src="/images/visitors/doorbell-setting/img7.png" width="100%" />
+    <img src="/images/visitors/essentials/doorbell-setting/img8.png" width="100%" />
 </Frame>
+
+<br />
+기기별 커스터마이징 방법은 아래 링크에서 추가로 확인할 수 있습니다!
+
+-   기기별 명칭 & 사용 기능 설정하기
+-   기기별 홈 화면 구성하기
+-   기기별 당일 방문 설정하기
