--- a/essentials/visitors/visit-purpose-setting.mdx
+++ b/essentials/visitors/visit-purpose-setting.mdx
@@ -1,48 +1,145 @@
 ---
-title: "당일 방문 목적 설정하기"
-description: "당일 방문자가 선택 가능한 방문 목적 목록을 설정하는 방법을 알려드립니다."
+title: "기기별 당일 방문 설정하기"
+description: "Mile Visitors 기기별로 당일 방문 활성화 여부와 담당자 설정하는 방법을 안내드립니다."
 ---
 
 ---
 
-`Mile Visitors` 탭에서 `당일 방문 목적` 페이지에 접속합니다.
+<Info>
+    회사 내부 정책상 사전에 방문 일정을 잡지 않고 방문한 방문자(택배, 배달, 우편 등등)의 방문 정보를 기록해야하는 경우 당일 방문 기능을
+    활용하여 방문자 정보를 기록할 수 있습니다.
+</Info>
+<br />
 
-당일 방문 목적 페이지는 아래의 2개의 탭으로 구분되어있습니다.
+## 1. 기기 관리 페이지 접속하기
+
+좌측의 `Mile Visitors` 탭을 클릭하고, 목록에서 `기기 관리` 페이지를 클릭하여, 해당 페이지에 접속해주세요.
+
+기기 관리 페이지에서는 Visitors 제품에 등록된 기기 정보를 조회하고 각 기기별로 태블릿에서 활성화시킬 기능을 설정할 수 있습니다.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img1.png" width="100%" />
+</Frame>
+<br />
+
+## 2. 설정할 기기 선택하기
+
+설정하고자 하는 기기를 선택해주세요.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img2.png" width="100%" />
+</Frame>
+<br />
+
+사이드 창이 띄워지면 당일 방문 탭을 선택해주세요.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img3.png" width="100%" />
+</Frame>
+<br />
+
+## 3. 당일 방문 기능 활성화 여부 설정하기
+
+우측에 위치한 토글 아이콘을 눌러 당일 방문 활성화 여부를 설정할 수 있습니다.
+
+<Info>
+<aside>
+ℹ️ 이때 당일 방문 사용 여부에 따라서 기기의 메인 화면이 변경됩니다.
+
+웹 상에서 메인 화면을 확인해보시려면, 홈 화면 구성 탭에서 현재 기기의 메인 화면을 보실 수 있습니다.
+
+</aside>
+</Info>
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img4.png" width="100%" />
+</Frame>
+<br />
+
+## 4. 당일 방문 목적 설정하기
+
+당일 방문 탭은 아래의 2개의 탭으로 구분되어있습니다.
 
 -   **방문 목적 설정**: 당일 방문 선택시 나타나는 Mile Visitors의 태블릿 내 당일 방문 목적 리스트를 설정할 수 있습니다.
--   **담당자 설정:** 각각의 설정한 당일 방문 목적마다 슬랙으로 알람 받을 담당자를 선택할 수 있습니다.
+-   **담당자 설정:** 각각의 \*\*\*\*설정한 당일 방문 목적마다 슬랙으로 알람 받을 담당자를 선택할 수 있습니다.
 
-현재 페이지에서는 **방문 목적 설정**에 대해서 작성하였습니다. **담당자 설정**에 대한 내용을 보시려면 [방문 목적별 담당자 설정하기]("https://mile.mintlify.app/essentials/visitors/visit-slack-setting")를 확인해주세요.
+먼저 방문 목적 설정 탭을 선택해주세요.
 
 <Frame>
-    <img src="/images/visitors/visit-purpose-setting/img1.png" width="100%" />
+    <img src="/images/visitors/essentials/visit-purpose-setting/img5.png" width="100%" />
 </Frame>
 <br />
 
-방문 목적 설정에는 변경 내용을 바로 확인해볼 수 있도록, 방문 목적 과 미리보기 섹션으로 이루어져있습니다.
+추가하기 버튼을 누르면 새로운 목적을 작성할 수 있는 아이콘 칸과, 목적 이름 작성란이 생깁니다.
+추가하고 싶은 방문 목적을 입력하고, 목적에 해당되는 아이콘을 선택해주신 후 저장 버튼을 눌러주세요.
 
+<Warning>설정 후 저장 버튼을 눌려주셔야 태블릿에 최종 반영됩니다.</Warning>
 <Frame>
-    <img src="/images/visitors/visit-purpose-setting/img2.png" width="100%" />
+    <img src="/images/visitors/essentials/visit-purpose-setting/img6.png" width="100%" />
 </Frame>
 <br />
 
-방문 목적 섹션의 하단 부분 추가하기 버튼을 클릭하면, 새로운 목적을 작성할 수 있는 아이콘 칸과, 목적 이름 작성 란이 생깁니다.
+<br />
+## 5. 당일 방문 목적별 담당자 설정하기
+
+당일 방문 탭 내에 있는 `담당자 설정` 탭을 선택해주세요.
 
 <Frame>
-    <img src="/images/visitors/visit-purpose-setting/img3.png" width="100%" />
+    <img src="/images/visitors/essentials/visit-purpose-setting/img7.png" width="100%" />
 </Frame>
 <br />
 
-선택할 수 있는 16가지의 방문 목적과 이름을 입력하시면 미리보기 섹션에서 바로 변경내용을 확인해보실 수 있습니다.
+`담당자 설정` 탭에 들어가면, 설정한 방문 목적 리스트가 탭으로 설정된 것을 확인할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visit-purpose-setting/img4.png" width="100%" />
+    <img src="/images/visitors/essentials/visit-purpose-setting/img8.png" width="100%" />
 </Frame>
 <br />
 
-변경할 내용을 최종적으로 저장하기 버튼을 눌러 적용하면, 최종적으로 Mile Visitors의 서비스에서 바로 적용 내용을 확인해보실 수 있습니다.
+각각의 목적 탭에서 해당 목적으로 방문한 방문자가 있을 때, 호출 알람이 가는 슬랙 채널 및 개인 담당자 DM을 설정할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visit-purpose-setting/img5.png" width="100%" />
+    <img src="/images/visitors/essentials/visit-purpose-setting/img9.png" width="100%" />
 </Frame>
 <br />
+
+### 5-1. 슬랙 채널 설정하기
+
+설정하고자 하는 목적 탭에서 `채널 추가하기` 버튼을 클릭합니다.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img10.png" width="100%" />
+</Frame>
+<br />
+
+추가하고자 하는 채널의 링크를 가져와 붙여넣은 후 `조회` 버튼을 눌러주세요.  
+조회된 슬랙 채널을 선택하고 `추가하기` 버튼을 누르면, 최종적으로 초인종이 눌렸을 때 알람 갈 슬랙 채널들이 추가됩니다.
+
+상세한 슬랙 채널 추가 방법은 <a href="https://mile.mintlify.app/essentials/common/link-slack-channel">슬랙 채널 연결하기</a>에서 확인해주세요.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img11.png" width="100%" />
+</Frame>
+<br />
+
+### 5-2. 담당자 설정하기
+
+목적 담당자 섹션의 우측 `담당자 추가하기` 버튼을 클릭합니다.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img12.png" width="100%" />
+</Frame>
+<br />
+
+추가하고자 하는 담당자를 검색하고, 선택하여 추가하기 버튼을 클릭하면, 최종적으로 알림 받을 담당자가 추가됩니다.
+
+<Frame>
+    <img src="/images/visitors/essentials/visit-purpose-setting/img13.png" width="100%" />
+</Frame>
+<br />
+
+각 기능별 상세 설정 방법은 아래 링크에서 확인할 수 있습니다!
+
+-   기기별 명칭 & 사용 기능 설정하기
+-   기기별 홈 화면 구성하기
+-   기기별 초인종 설정하기
