--- a/notice/update.mdx
+++ b/notice/update.mdx
@@ -3,6 +3,11 @@ title: "업데이트 목록"
 description: "마일의 새로운 기능과 업데이트 정보를 확인하세요."
 ---
 
+<Card title="[23.04.14] 마일 1.2.9 업데이트" href="https://mile.mintlify.app/notice/update/2024.04.14">
+    `Feat` Mile Meeting 회의실 자동 체크인, 체크아웃 기능이 추가되었습니다. <br />
+    `Feat` Mile Visitors 당일 방문 목적별 유저 정보 받기 기능이 추가되었습니다. <br />
+</Card>
+
 <Card title="[23.03.31] 마일 1.2.8 업데이트" href="https://mile.mintlify.app/notice/update/2024.03.31">
     `Fix` Mile Visitors 커스터마이징 기능이 기기별 설정 기능으로 변경되었습니다. <br />
     `Feat` Mile Visitors 사전 방문자 등록(임직원용)시, slack 알림 받을 수 있는 담당자 추가 기능이 추가되었습니다. <br />
