--- a/question.mdx
+++ b/question.mdx
@@ -27,7 +27,7 @@ description: "FAQ"
     <Accordion title="Q. 신규 입사자가 마일 서비스 내에서 보이지 않습니다. or 지난달 퇴사자가 여전히 남아 있어요.">
         마일 서비스는 구글 워크스페이스와의 연동을 기반으로 제공되는 서비스입니다.
 
-        신규 입/퇴사자가 발생한 경우 <strong>마일 관리자 웹페이지 > 서비스 연동 > 구글 스페이스 연동 > 멤버 관리</strong>에서 동기화 작업을 진행해주셔야 합니다. 구체적인 과정은 <a href="https://mile.mintlify.app/essentials/google">구글 캘린더 연동하기</a>에서 확인하실 수 있습니다.
+        신규 입/퇴사자가 발생한 경우 <strong>마일 관리자 웹페이지 > 서비스 연동 > 구글 스페이스 연동 > 멤버 관리</strong>에서 동기화 작업을 진행해주셔야 합니다. 구체적인 과정은 <a href="https://mile.mintlify.app/essentials/link/google">구글 캘린더 연동하기</a>에서 확인하실 수 있습니다.
     </Accordion>
     <Accordion title="Q. 태블릿 PC에서 연장 요청 시, 대상자에게 슬랙 메세지가 전송되지 않아요.">
         마일 서비스는 슬랙과 구글 워크스페이스 이메일이 동일한 계정임을 전제로 합니다.
