--- a/essentials/link/google.mdx
+++ b/essentials/link/google.mdx
@@ -7,7 +7,8 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 
 구글 캘린더로 관리할 회의실을 선택해주시면, 태블릿에서 해당 회의실의 예약 및 회의 시작등 여러가지 기능들을 사용하실 수 있습니다.
 
-<a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 태블릿에서의 회의실 선택 및 자세한 사용법을 확인해주세요.
+<a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 태블릿에서의 회의실 선택 및 자세한 사용법을
+확인해주세요.
 
 ---
 
@@ -20,7 +21,7 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 <br />
 
 <Frame>
-  <img src="/images/essentials/link/google/img1.png" width="100%" height="300" />
+    <img src="/images/essentials/link/google/img1.png" width="100%" height="300" />
 </Frame>
 
 <br />
@@ -30,7 +31,7 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 맨 상단의 `구글 워크스페이스 연동` 탭에서 `편집하기` 버튼을 눌러 태블릿에서 보이는 회의실을 선택하여 연동하실 수 있습니다.
 
 <Frame>
-  <img src="/images/essentials/link/google/img2.png" width="100%" height="300" />
+    <img src="/images/essentials/link/google/img2.png" width="100%" height="300" />
 </Frame>
 <br />
 
@@ -39,13 +40,13 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 > 최대 5분 정도의 연동시간이 필요할 수 있습니다.
 
 <Frame>
-  <img src="/images/essentials/link/google/img3.png" width="100%" height="300" />
+    <img src="/images/essentials/link/google/img3.png" width="100%" height="300" />
 </Frame>
 
 <br />
 연동 완료 후, `연동된 캘린더` 탭에서 현재 연동된 캘린더 리스트를 확인해보실 수 있습니다.
 <Frame>
-  <img src="/images/essentials/link/google/img4.png" width="100%" height="300" />
+    <img src="/images/essentials/link/google/img4.png" width="100%" height="300" />
 </Frame>
 
 해당 캘린더 설정이 완료가 되셨으면, <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>를 확인해주시고, 태블릿으로 회의실 예약을 진행해보세요!
