--- a/essentials/link/google.mdx
+++ b/essentials/link/google.mdx
@@ -1,24 +1,17 @@
 ---
-title: "구글 캘린더 연동하기"
-description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿에서 받아보세요!"
+title: "[Meeting] 구글 캘린더 연동하기"
+description: "구글 캘린더 연동을 통해 회의실 일정을 태블릿에서 확인하세요!"
 ---
 
----
 
-구글 캘린더로 관리할 회의실을 선택해주시면, 태블릿에서 해당 회의실의 예약 및 회의 시작등 여러가지 기능들을 사용하실 수 있습니다.
+구글 캘린더를 연동하시면, 태블릿에서 해당 회의실 예약 및 연장 등 효율적인 회의실 이용을 위한 다양한 기능을 사용하실 수 있습니다.
 
-<a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 태블릿에서의 회의실 선택 및 자세한 사용법을
-확인해주세요.
 
----
+## 1. 캘린더 연동 탭 접속하기
 
-## 1. 서비스 연동 탭 이동하기
+마일 웹에 로그인하신 후 좌측의 설정 아이콘을 선택하신 뒤, `서비스 연동 관리 > 캘린더 연동` 탭을 선택해주세요.
 
-로그인 후 나오는 메인 페이지에서 좌측 목록 부분에서 `서비스 연동`탭을 클릭하셔서 서비스 연동 페이지로 접속합니다.
-
-> 서비스 연동 탭은 슬랙과 구글 워크스페이스와 같이, 마일 서비스 이용에 필요한 서비스들을 연동하는 페이지입니다.
-
-<br />
+> 캘린더 연동 탭은 마일 태블릿에서 관리하고 사용할 구글 캘린더 리소스를 연동하는 페이지입니다.
 
 <Frame>
     <img src="/images/essentials/link/google/img1.png" width="100%" height="300" />
@@ -27,26 +20,30 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 <br />
 
 ## 2. 구글 캘린더 연동하기
+<Warning>구글 캘린더 연동은 마일 서비스 내 **Owner 권한**을 가진 계정만 연동할 수 있습니다.</Warning>
 
-맨 상단의 `구글 워크스페이스 연동` 탭에서 `편집하기` 버튼을 눌러 태블릿에서 보이는 회의실을 선택하여 연동하실 수 있습니다.
+Owner 권한을 가진 계정으로 `편집하기` 버튼을 선택합니다.
 
 <Frame>
     <img src="/images/essentials/link/google/img2.png" width="100%" height="300" />
 </Frame>
+
 <br />
 
-`편집하기` 버튼을 누르면, 연동할 캘린더를 선택할 수 있는 모달 창이 뜨게되고, 해당 창에서 연동하고 싶은 캘린더를 선택하여 하단에 있는 `확인` 버튼을 눌러주시면 로딩 후에 연동이 되어 모달창이 사라집니다.
+`편집하기` 버튼을 누르면 구글 워크스페이스에 존재하는 구글 캘린더 리소스가 모두 조회됩니다. 목록 중에서 연동하고 싶은 캘린더를 선택한 후, 하단에 위치한 `확인` 버튼을 눌러줍니다.
 
-> 최대 5분 정도의 연동시간이 필요할 수 있습니다.
+<Note>최대 5분의 연동 시간이 소요될 수 있습니다.</Note>
 
 <Frame>
     <img src="/images/essentials/link/google/img3.png" width="100%" height="300" />
 </Frame>
 
 <br />
-연동 완료 후, `연동된 캘린더` 탭에서 현재 연동된 캘린더 리스트를 확인해보실 수 있습니다.
+
+연동 완료 후, `연동된 캘린더` 탭에서 현재 연동되어있는 캘린더 목록을 확인하실 수 있습니다.
+
 <Frame>
     <img src="/images/essentials/link/google/img4.png" width="100%" height="300" />
 </Frame>
 
-해당 캘린더 설정이 완료가 되셨으면, <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>를 확인해주시고, 태블릿으로 회의실 예약을 진행해보세요!
+캘린더 연동이 완료되었으면, <a href="https://mile.mintlify.app/essentials/meeting/tablet-login">로그인 및 회의실 선택하기</a>에서 태블릿 세팅을 시작해보세요.
